# whisperer_ml_app

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker_build.yaml
app/: app.py  db_paths.py  format_functions.py  home.py  utils.py
app/pages/: 01_diarize.py  01_🗣_diarize.py  02_auto_label.py  02_🤖_auto_label.py  03_transcribe.py  03_📚_transcribe.py  diarize.py  transcribe.py
backend/: server.py  whisperer_commands.py
data/speakers_labels/: speakers.txt
frontend/: urls.py  web.py
