[tool.poetry]
name = "whisperer-ml-app"
version = "0.1.0"
description = ""
authors = ["miguelvalente <miguelvalente@protonmail.com>"]
readme = "README.md"
packages = [{include = "whisperer_ml_app"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.11"
whisperer-ml = "^0.1.6"
streamlit = "^1.18.1"
stqdm = "^0.0.5"


[build-system]
requires = ["poetry-core<=1.4.0"]
build-backend = "poetry.core.masonry.api"
